--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,15 @@
 		}
 	},
 	"require": {
-		"php": "^5.6|^7.0",
-		"nette/application": "^2.3",
-		"nette/utils": ">=2.4.0",
-		"nette/forms": "^2.3",
+		"php": "^7.1",
+		"nette/application": "^3.0",
+		"nette/utils": "^3.0",
+		"nette/forms": "^3.0",
 		"ublaboo/responses": "~1.0.0 || ~2.0.0",
 		"symfony/property-access": "^3.0.0 || ^4.0.0"
 	},
 	"require-dev": {
-		"nette/tester": "^1.6.1",
+		"nette/tester": "^2.0",
 		"tracy/tracy": "^2.3.0",
 		"mockery/mockery": "~0.9",
 		"tharos/leanmapper": "~2.2.0",
